[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doctrine-protocol"
version = "0.1.0"
description = "Mountable AI behavior framework enforcing user authority, non-autonomy, non-sentience, safety & anti-drift"
readme = "README.md"
license = {text = "AGPL-3.0-or-later"}
authors = [{name = "Xxaion Labs", email = "xxaionlabs@gmail.com"}]
keywords = ["ai", "llm", "prompt-engineering", "ai-safety", "doctrine", "guardrails"]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/Xxaion-Labs/doctrine-protocol"

[project.scripts]
doctrine = "doctrine.cli:main"
doctrineos = "doctrineos.shell:main"

[tool.setuptools]
packages = ["doctrine", "doctrineos", "doctrineos.adapters"]
package-dir = {"doctrine" = "sdk", "doctrineos" = "doctrineos"}

[tool.pytest.ini_options]
pythonpath = ["."]
